# BentoVLLM

./: .bentoignore  .editorconfig  .gitattributes  .gitignore  .ruff.toml  DEVELOPMENT.md  README.md  README.md.tpl  bentofile.yaml  build.py  config.yaml  deepseek-r1-0528-qwen3-8b.yaml  deepseek-r1-llama3.3-70b.yaml  deepseek-v3-671b.yaml  deploy.py  devstral-small-2505.yaml  gemma3-4b-instruct.yaml  generate.py  jamba1.6-large.yaml  llama3.1-8b-instruct.yaml  llama3.2-3b-instruct.yaml  llama3.3-70b-instruct.yaml  llama4-17b-maverick-instruct.yaml  llama4-17b-scout-instruct.yaml  locustfile.py  mistral-small-3.1-24b-instruct-2503.yaml  openai_utils.py  phi4-14b-reasoning-plus.yaml  phi4-14b-reasoning.yaml  phi4-14b.yaml  push.py  pyproject.toml  qwen3-235b-a22b.yaml  qwen3-30b-a3b.yaml  qwen3-8b.yaml  qwq-32b.yaml  requirements.txt  service.py  setup.sh  ty.toml
.github/: MODEL.md.j2  README.md  README.md.j2  deepseek-prover-v2-671b.yaml  deepseek-r1-0528-qwen3-8b.yaml  deepseek-r1-671b.yaml  deepseek-r1-llama3.3-70b.yaml  deepseek-v3.1-671b.yaml  devstral-small-2505.yaml  gemma3-4b-instruct.yaml  gpt-oss-120b.yaml  gpt-oss-20b.yaml  jamba1.6-mini.yaml  llama3.1-8b-instruct.yaml  llama3.1-8b-kv-offloading.yaml  llama3.2-3b-instruct.yaml  llama3.3-70b-instruct.yaml  llama4-17b-maverick-instruct.yaml  llama4-17b-scout-instruct.yaml  magistral-small-2506.yaml  phi4-14b-reasoning-plus.yaml  phi4-14b-reasoning.yaml  phi4-14b.yaml  qwen3-235b-a22b.yaml  qwen3-30b-a3b.yaml  qwen3-8b.yaml  qwen3-coder-408b-a35b.yaml  qwen3-next-80b-a3b.yaml
_src/: README.md  README.md.j2  requirements.txt.j2  service.py  service.py.j2
_tools/: build.py  config.yaml  deploy.py  generate.py  push.py
ai21-jamba-1.5-mini/: README.md  service.py
ai21-jamba-1.5-mini-int8/: README.md  requirements.txt  service.py
bentovllm_openai/: utils.py
deephermes-3-llama3-8b/: README.md  requirements.txt  service.py
deepseek-prover-v2-671b/: README.md  pyproject.toml  requirements.txt  service.py
deepseek-prover-v2-7b/: README.md  service.py
deepseek-r1-0528-qwen3-8b/: README.md  pyproject.toml  requirements.txt  service.py
deepseek-r1-671b/: README.md  pyproject.toml  requirements.txt  service.py
deepseek-r1-distill-llama3.1-8b/: README.md  pyproject.toml  service.py
deepseek-r1-distill-llama3.1-8b-tool-calling/: README.md  pyproject.toml  requirements.txt  service.py
deepseek-r1-distill-llama3.3-70b/: README.md  pyproject.toml  requirements.txt  service.py
deepseek-r1-distill-llama3.3-70b-w4a16/: README.md  service.py
deepseek-r1-distill-llama3.3-70b-w8a8/: README.md  service.py
deepseek-r1-distill-qwen2.5-14b/: README.md  pyproject.toml  service.py
deepseek-r1-distill-qwen2.5-14b-w4a16/: README.md  service.py
deepseek-r1-distill-qwen2.5-14b-w8a8/: README.md  service.py
deepseek-r1-distill-qwen2.5-32b/: README.md  pyproject.toml  requirements.txt  service.py
deepseek-r1-distill-qwen2.5-32b-w4a16/: README.md  service.py
deepseek-r1-distill-qwen2.5-32b-w8a8/: README.md  service.py
deepseek-r1-distill-qwen2.5-7b-math/: README.md  pyproject.toml  service.py
deepseek-r1-llama3.3-70b/: .gitignore  README.md  pyproject.toml  requirements.txt  service.py
deepseek-v2-lite-pd/: .gitignore  README.md  disagg_launcher.sh  disagg_proxy_server.py  pyproject.toml  requirements.txt  service.py
deepseek-v3-671b/: README.md  pyproject.toml  requirements.txt  service.py
deepseek-v3.1-671b/: .gitignore  README.md  pyproject.toml
devstral-small-2505/: README.md  pyproject.toml  service.py
gemma-7b-it/: README.md  bentofile.yaml  requirements.txt  service.py
gemma2-27b-instruct/: README.md  pyproject.toml  requirements.txt  service.py
gemma2-2b-instruct/: README.md  pyproject.toml  requirements.txt  service.py
gemma2-9b-instruct/: README.md  pyproject.toml  service.py
gemma3-1b-instruct/: README.md  requirements.txt  service.py
gemma3-4b-instruct/: README.md  pyproject.toml  requirements.txt  service.py
gpt-oss-120b/: README.md  pyproject.toml  requirements.txt  service.py
gpt-oss-20b/: README.md  pyproject.toml  service.py
hermes-3-70B-gguf/: README.md  requirements.txt  service.py
hermes-3-llama3.1-405b/: README.md  requirements.txt  service.py
jamba1.5-large/: README.md  requirements.txt  service.py
jamba1.5-mini/: README.md  pyproject.toml  requirements.txt  service.py
jamba1.6-large/: .gitignore  README.md  pyproject.toml
jamba1.6-mini/: README.md  pyproject.toml  requirements.txt
jamba1.6-mini/templates/: tool_gpt_oss.jinja
llama2-7b-chat/: README.md  import_model.py  requirements.txt  service.py
llama3-70b-instruct-awq/: README.md  bentofile.yaml  import_model.py  requirements.txt  service.py  setup.sh
llama3-8b-instruct/: README.md  bentofile.yaml  import_model.py  requirements.txt  service.py
llama3.1-405b-instruct-awq/: README.md  bentofile.yaml  requirements.txt  service.py
llama3.1-70b-instruct-awq/: README.md  requirements.txt  service.py
llama3.1-70b-instruct-awq-function-calling/: README.md  bentofile.yaml  requirements.txt  service.py  test_tool.py
llama3.1-8b-instruct/: README.md  bentofile.yaml  pyproject.toml  requirements.txt  service.py  tp-4.yaml
llama3.1-8b-kv-offloading/: .bentoignore  README.md  pyproject.toml  requirements.txt  service.py
llama3.3-70b-instruct/: README.md  pyproject.toml  requirements.txt  service.py
llama4-17b-scout-instruct/: README.md  pyproject.toml  requirements.txt  service.py
magistral-small-2506/: README.md  pyproject.toml  requirements.txt  service.py
phi4-14b-reasoning/: README.md  pyproject.toml  requirements.txt  service.py
qwen2.5-coder-32b-instruct/: README.md  pyproject.toml  service.py
qwen3-30b-a3b/: README.md  pyproject.toml  requirements.txt  service.py
qwen3-30b-a3b-instruct-pd/: .gitignore  README.md  pyproject.toml  requirements.txt  run.sh  service.py
qwen3-30b-a3b-instruct-pd/components/: __init__.py  config.py  decode.py  prefill.py  router.py
qwen3-coder-408b-a35b/: README.md  pyproject.toml  service.py
qwen3-next-80b-a3b/: README.md  pyproject.toml
(+200 files in other folders)
