[project]
name = "deepseek-r1-0528-qwen3-8b"
version = "1.4.23"
description = "Self-host LLMs with vLLM and BentoML"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "BentoML Team", email = "contact@bentoml.com" },
]

[project.license]
text = "Apache-2.0"

[project.urls]
Website = "https://bentoml.com"
Documentation = "https://docs.bentoml.com"
GitHub = "https://github.com/bentoml/OpenLLM"
Twitter = "https://twitter.com/bentomlai"
Tracker = "https://github.com/bentoml/OpenLLM/issues"

[tool.bentoml.build]
service = "service.py:LLM"
include = [
  "*.py",
  "*.toml",
  "*.txt",
  "*.md",
  "templates/*",
]

[tool.bentoml.build.args]
name = "r1-0528-qwen3-8b"
gpu_type = "nvidia-h100-80gb"
tp = 1
autotune = [
  1,
  2,
  4,
  8,
  16,
]
model_id = "deepseek-ai/DeepSeek-R1-0528-Qwen3-8B"
reasoning_parser = "deepseek_r1"
tool_parser = "hermes"
envs = [
  { name = "HF_TOKEN" },
]

[tool.bentoml.build.args.metadata]
description = "DeepSeek R1 0528 Qwen3 8B"
provider = "DeepSeek"
gpu_recommendation = "1 Nvidia GPU with at least 80GB VRAM (e.g. about 1 H100 GPU)."

[tool.bentoml.build.args.hf_generation_config]
temperature = 0.6
top_p = 0.95

[tool.ruff]
extend-include = [
  "*.ipynb",
]
preview = true
line-length = 119
indent-width = 2

[tool.ruff.format]
preview = true
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = true
docstring-code-format = true

[tool.ruff.lint]
ignore = [
  "RUF012",
  "ANN",
  "E722",
]
select = [
  "F",
  "G",
  "PERF",
  "RUF",
  "W6",
  "E71",
  "E72",
  "E112",
  "E113",
  "E203",
  "E272",
  "E502",
  "E702",
  "E703",
  "E731",
  "W191",
  "W291",
  "W293",
  "UP039",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
