[project]
name = "gpt-oss-20b"
version = "1.4.23"
description = "Self-host LLMs with vLLM and BentoML"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "BentoML Team", email = "contact@bentoml.com" },
]

[project.license]
text = "Apache-2.0"

[project.urls]
Website = "https://bentoml.com"
Documentation = "https://docs.bentoml.com"
GitHub = "https://github.com/bentoml/OpenLLM"
Twitter = "https://twitter.com/bentomlai"
Tracker = "https://github.com/bentoml/OpenLLM/issues"

[tool.bentoml.build]
service = "service.py:LLM"
include = [
  "*.py",
  "*.toml",
  "*.txt",
  "*.md",
  "templates/*",
]

[tool.bentoml.build.args]
name = "gpt-oss-20b"
gpu_type = "nvidia-h100-80gb"
tp = 1
model_id = "openai/gpt-oss-20b"
autotune = [
  1,
  2,
  4,
  8,
  16,
  24,
]
post = [
  "uv pip uninstall vllm",
  "uv pip install -U openai lmcache nixl",
  "uv pip install --pre vllm --extra-index-url https://wheels.vllm.ai/nightly/ --extra-index-url https://download.pytorch.org/whl/nightly/cu128 --index-strategy unsafe-best-match",
]
exclude = [
  "original/**/*",
  "metal/**/*",
]
attn_backend = "TRITON_ATTN_VLLM_V1"
skip_flashinfer = true
nightly = true
tool_parser = "openai"
cli_args = [
  "--chat-template",
  "templates/tool_gpt_oss.jinja",
]
envs = [
  { name = "HF_TOKEN" },
]

[tool.bentoml.build.args.metadata]
description = "GPT OSS MoE 20B"
provider = "OpenAI"
gpu_recommendation = "Nvidia GPUs with at least 80GB VRAM (e.g about 1 H100 GPU)."

[tool.ruff]
extend-include = [
  "*.ipynb",
]
preview = true
line-length = 119
indent-width = 2

[tool.ruff.format]
preview = true
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = true
docstring-code-format = true

[tool.ruff.lint]
ignore = [
  "RUF012",
  "ANN",
  "E722",
]
select = [
  "F",
  "G",
  "PERF",
  "RUF",
  "W6",
  "E71",
  "E72",
  "E112",
  "E113",
  "E203",
  "E272",
  "E502",
  "E702",
  "E703",
  "E731",
  "W191",
  "W291",
  "W293",
  "UP039",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
