[project]
name = "llama4-17b-scout-instruct"
version = "1.4.22"
description = "Self-host LLMs with vLLM and BentoML"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "BentoML Team", email = "contact@bentoml.com" },
]

[project.license]
text = "Apache-2.0"

[project.urls]
Website = "https://bentoml.com"
Documentation = "https://docs.bentoml.com"
GitHub = "https://github.com/bentoml/OpenLLM"
Twitter = "https://twitter.com/bentomlai"
Tracker = "https://github.com/bentoml/OpenLLM/issues"

[tool.bentoml.build]
service = "service.py:LLM"
include = [
  "*.py",
  "*.toml",
  "*.txt",
  "*.md",
  "templates/*",
]

[tool.bentoml.build.args]
name = "llama4-17b-scout-instruct"
gpu_type = "nvidia-h100-80gb"
tp = 8
model_id = "meta-llama/Llama-4-Scout-17B-16E-Instruct"
tool_parser = "pythonic"
cli_args = [
  "--max-model-len",
  "1000000",
]
envs = [
  { name = "HF_TOKEN" },
  { name = "VLLM_DISABLE_COMPILE_CACHE", value = "1" },
]
exclude = [
  "original",
  "consolidated*",
  "*.pth",
  "*.pt",
]

[tool.bentoml.build.args.metadata]
vision = true
description = "Llama 4 Scout 17B-16E Instruct"
provider = "Meta"
gpu_recommendation = "Nvidia GPUs with at least 141GBx8 VRAM (e.g about 8 H200 GPUs or 16 H100 GPUs)."

[tool.bentoml.build.args.hf_generation_config]
temperature = 0.6
top_p = 0.9

[tool.ruff]
extend-include = [
  "*.ipynb",
]
preview = true
line-length = 119
indent-width = 2

[tool.ruff.format]
preview = true
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = true
docstring-code-format = true

[tool.ruff.lint]
ignore = [
  "RUF012",
  "ANN",
  "E722",
]
select = [
  "F",
  "G",
  "PERF",
  "RUF",
  "W6",
  "E71",
  "E72",
  "E112",
  "E113",
  "E203",
  "E272",
  "E502",
  "E702",
  "E703",
  "E731",
  "W191",
  "W291",
  "W293",
  "UP039",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ty.src]
respect-ignore-files = true
root = "./"

[tool.ty.environment]
python = "./.venv"
python-version = "3.11"
