[project]
name = "magistral-small-2506"
version = "1.4.23"
description = "Self-host LLMs with vLLM and BentoML"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "BentoML Team", email = "contact@bentoml.com" },
]

[project.license]
text = "Apache-2.0"

[project.urls]
Website = "https://bentoml.com"
Documentation = "https://docs.bentoml.com"
GitHub = "https://github.com/bentoml/OpenLLM"
Twitter = "https://twitter.com/bentomlai"
Tracker = "https://github.com/bentoml/OpenLLM/issues"

[tool.bentoml.build]
service = "service.py:LLM"
include = [
  "*.py",
  "*.toml",
  "*.txt",
  "*.md",
  "templates/*",
]

[tool.bentoml.build.args]
name = "magistral-small-2506"
gpu_type = "nvidia-h100-80gb"
tp = 2
model_id = "mistralai/Magistral-Small-2506"
autotune = [
  1,
  2,
  4,
  8,
  16,
]
envs = [
  { name = "HF_TOKEN" },
]
tool_parser = "mistral"
cli_args = [
  "--tokenizer-mode",
  "mistral",
  "--config-format",
  "mistral",
  "--load-format",
  "mistral",
]
exclude = [
  "model*",
]
hf_system_prompt = "A user will ask you to solve a task. You should first draft your thinking process (inner monologue) until you have derived the final answer. Afterwards, write a self-contained summary of your thoughts (i.e. your summary should be succinct but contain all the critical steps you needed to reach the conclusion). You should use Markdown to format your response. Write both your thoughts and summary in the same language as the task posed by the user. NEVER use \\boxed{} in your response.\n\nYour thinking process must follow the template below:\n<think>\nYour thoughts or/and draft, like working through an exercise on scratch paper. Be as casual and as long as you want until you are confident to generate a correct answer.\n</think>\n\nDon't mention that this is a summary.\n"

[tool.bentoml.build.args.metadata]
description = "Magistral 3.1 24B 2506 Reasoning Model"
provider = "Mistral AI"
gpu_recommendation = "Nvidia GPUs with at least 80GBx2 VRAM (e.g about 2 H100 GPU)."

[tool.bentoml.build.args.hf_generation_config]
temperature = 0.7
top_p = 0.95

[tool.ruff]
extend-include = [
  "*.ipynb",
]
preview = true
line-length = 119
indent-width = 2

[tool.ruff.format]
preview = true
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = true
docstring-code-format = true

[tool.ruff.lint]
ignore = [
  "RUF012",
  "ANN",
  "E722",
]
select = [
  "F",
  "G",
  "PERF",
  "RUF",
  "W6",
  "E71",
  "E72",
  "E112",
  "E113",
  "E203",
  "E272",
  "E502",
  "E702",
  "E703",
  "E731",
  "W191",
  "W291",
  "W293",
  "UP039",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
