[project]
name = "qwen3-30b-fp8-pd"
version = "1.4.25"
description = "Self-host LLMs with SGLang and BentoML"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "BentoML Team", email = "contact@bentoml.com" }]

[project.license]
text = "Apache-2.0"

[project.urls]
Website = "https://bentoml.com"
Documentation = "https://docs.bentoml.com"
GitHub = "https://github.com/bentoml/OpenLLM"
Twitter = "https://twitter.com/bentomlai"
Tracker = "https://github.com/bentoml/OpenLLM/issues"

[tool.bentoml.build]
service = "service.py:Router"
include = [
  "*.py",
  "*.toml",
  "*.txt",
  "*.md",
  "*.whl",
  "wheels/*",
  "templates/*",
  "config/*",
  "components/*",
]

[tool.ruff]
extend-include = ["*.ipynb"]
preview = true
line-length = 119
indent-width = 2

[tool.ruff.format]
preview = true
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = true
docstring-code-format = true

[tool.ruff.lint]
ignore = ["RUF012", "ANN", "E722"]
select = [
  "F",
  "G",
  "PERF",
  "RUF",
  "W6",
  "E71",
  "E72",
  "E112",
  "E113",
  "E203",
  "E272",
  "E502",
  "E702",
  "E703",
  "E731",
  "W191",
  "W291",
  "W293",
  "UP039",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
