[project]
name = "qwen3-coder-408b-a35b"
version = "1.4.21"
description = "Self-host LLMs with vLLM and BentoML"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "BentoML Team", email = "contact@bentoml.com" },
]

[project.license]
text = "Apache-2.0"

[project.urls]
Website = "https://bentoml.com"
Documentation = "https://docs.bentoml.com"
GitHub = "https://github.com/bentoml/OpenLLM"
Twitter = "https://twitter.com/bentomlai"
Tracker = "https://github.com/bentoml/OpenLLM/issues"

[tool.bentoml.build]
service = "service.py:LLM"
include = [
  "*.py",
  "*.toml",
  "*.txt",
  "*.md",
  "templates/*",
]

[tool.bentoml.build.args]
name = "qwen3-coder-480b-a35b"
gpu_type = "nvidia-h200-141gb"
tp = 4
model_id = "Qwen/Qwen3-Coder-480B-A35B-Instruct-FP8"
reasoning_parser = "deepseek_r1"
autotune = [
  1,
  2,
  4,
  8,
  16,
  24,
]
tool_parser = "hermes"
max_model_len = 32768

[tool.bentoml.build.args.metadata]
description = "Qwen 3 Coder 480B A35B MoE"
provider = "Alibaba"
gpu_recommendation = "Nvidia GPUs with at least 80GBx4 VRAM (e.g about 4 H100 GPUs)."

[tool.bentoml.build.args.hf_generation_config]
temperature = 0.7
top_k = 20
top_p = 0.8
repetition_penalty = 1.05

[tool.ruff]
extend-include = [
  "*.ipynb",
]
preview = true
line-length = 119
indent-width = 2

[tool.ruff.format]
preview = true
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = true
docstring-code-format = true

[tool.ruff.lint]
ignore = [
  "RUF012",
  "ANN",
  "E722",
]
select = [
  "F",
  "G",
  "PERF",
  "RUF",
  "W6",
  "E71",
  "E72",
  "E112",
  "E113",
  "E203",
  "E272",
  "E502",
  "E702",
  "E703",
  "E731",
  "W191",
  "W291",
  "W293",
  "UP039",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ty.src]
respect-ignore-files = true
root = "./"

[tool.ty.environment]
python = "./.venv"
python-version = "3.11"
