[project]
name = "qwen3-next-80b-a3b"
version = "1.4.25"
description = "Self-host LLMs with vLLM and BentoML"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "BentoML Team", email = "contact@bentoml.com" },
]

[project.license]
text = "Apache-2.0"

[project.urls]
Website = "https://bentoml.com"
Documentation = "https://docs.bentoml.com"
GitHub = "https://github.com/bentoml/OpenLLM"
Twitter = "https://twitter.com/bentomlai"
Tracker = "https://github.com/bentoml/OpenLLM/issues"

[tool.bentoml.build]
service = "service.py:LLM"
include = [
  "*.py",
  "*.toml",
  "*.txt",
  "*.md",
  "templates/*",
]

[tool.bentoml.build.args]
name = "qwen3-next-80b-a3b"
gpu_type = "nvidia-h100-80gb"
tp = 4
model_id = "Qwen/Qwen3-30B-A3B-Instruct-2507-FP8"
reasoning_parser = "deepseek_r1"
tool_parser = "hermes"
max_model_len = 262144
cli_args = [
  "--speculative-config",
  "{\"method\":\"qwen3_next_mtp\",\"num_speculative_tokens\":2}",
]

[tool.bentoml.build.args.metadata]
description = "Qwen 3 Next 80B A3B MoE"
provider = "Alibaba"
gpu_recommendation = "Nvidia GPU with at least 80GBx4 VRAM (e.g about 4 H100 GPUs or 2 H200 GPU)."

[tool.bentoml.build.args.hf_generation_config]
temperature = 0.7
top_k = 20
top_p = 0.8
min_p = 0
presence_penalty = 1.5

[tool.ruff]
extend-include = [
  "*.ipynb",
]
preview = true
line-length = 119
indent-width = 2

[tool.ruff.format]
preview = true
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = true
docstring-code-format = true

[tool.ruff.lint]
ignore = [
  "RUF012",
  "ANN",
  "E722",
]
select = [
  "F",
  "G",
  "PERF",
  "RUF",
  "W6",
  "E71",
  "E72",
  "E112",
  "E113",
  "E203",
  "E272",
  "E502",
  "E702",
  "E703",
  "E731",
  "W191",
  "W291",
  "W293",
  "UP039",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
